Minor style fixes - Removed all scrollbars but kept functionality - Removed/lowered padding that led to overflow on mobile devices

--- a/app/globals.css
+++ b/app/globals.css
@@ -34,3 +34,14 @@
   transform: scale(1.1);
   box-shadow: 0 0 10px white;
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+*::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+* {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
